WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
96108
[EFL] [WK2] Set theme for the inspector view
https://bugs.webkit.org/show_bug.cgi?id=96108
Summary
[EFL] [WK2] Set theme for the inspector view
Sudarsana Nagineni (babu)
Reported
2012-09-07 07:38:36 PDT
Right now the theme is not set for the inspector view, so all the tests are failing on EFL Debug bot. We must set the theme for the inspector view when it is created.
Attachments
Patch
(1.51 KB, patch)
2012-09-07 07:50 PDT
,
Sudarsana Nagineni (babu)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Sudarsana Nagineni (babu)
Comment 1
2012-09-07 07:50:46 PDT
Created
attachment 162769
[details]
Patch
Chris Dumez
Comment 2
2012-09-07 10:40:21 PDT
Comment on
attachment 162769
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=162769&action=review
> Source/WebKit2/UIProcess/efl/WebInspectorProxyEfl.cpp:50 > + ewk_view_theme_set(m_inspectorView, TEST_THEME_DIR"/default.edj");
Shouldn't we do this in _ewk_view_initialize() so that we are sure every view has a theme set? Since it seems to be causing crashes when a view does not have a theme set, I think we should fix this at the origin.
Sudarsana Nagineni (babu)
Comment 3
2012-09-07 11:38:11 PDT
Comment on
attachment 162769
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=162769&action=review
>> Source/WebKit2/UIProcess/efl/WebInspectorProxyEfl.cpp:50 >> + ewk_view_theme_set(m_inspectorView, TEST_THEME_DIR"/default.edj"); > > Shouldn't we do this in _ewk_view_initialize() so that we are sure every view has a theme set? Since it seems to be causing crashes when a view does not have a theme set, I think we should fix this at the origin.
I was about to fix your comment, but now I found that recently we dropped the default theme setting on the view initialization.
https://bugs.webkit.org/show_bug.cgi?id=94778
Kenneth Rohde Christiansen
Comment 4
2012-09-07 17:03:32 PDT
Comment on
attachment 162769
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=162769&action=review
>>> Source/WebKit2/UIProcess/efl/WebInspectorProxyEfl.cpp:50 >>> + ewk_view_theme_set(m_inspectorView, TEST_THEME_DIR"/default.edj"); >> >> Shouldn't we do this in _ewk_view_initialize() so that we are sure every view has a theme set? Since it seems to be causing crashes when a view does not have a theme set, I think we should fix this at the origin. > > I was about to fix your comment, but now I found that recently we dropped the default theme setting on the view initialization. >
https://bugs.webkit.org/show_bug.cgi?id=94778
Huh? So we are supposed to not have a default theme and it should then paint what?
Kenneth Rohde Christiansen
Comment 5
2012-09-07 17:08:44 PDT
Comment on
attachment 162769
[details]
Patch We should probably land this and fix the real issues in a separate bug.
WebKit Review Bot
Comment 6
2012-09-07 17:42:24 PDT
Comment on
attachment 162769
[details]
Patch Clearing flags on attachment: 162769 Committed
r127942
: <
http://trac.webkit.org/changeset/127942
>
WebKit Review Bot
Comment 7
2012-09-07 17:42:27 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug