[EFL] [WK2] Set theme for the inspector view https://bugs.webkit.org/show_bug.cgi?id=96108

Patch by Sudarsana Nagineni <sudarsana.nagineni@linux.intel.com> on 2012-09-07
Reviewed by Kenneth Rohde Christiansen.

Set the theme for the inspector view when it is created.

* UIProcess/efl/WebInspectorProxyEfl.cpp:
(WebKit::WebInspectorProxy::platformCreateInspectorPage):

git-svn-id: svn://svn.chromium.org/blink/trunk@127942 bbb929c8-8fbe-4397-9dbb-9b2b20218538