third_party/WebKit/Source/WebKit2/UIProcess/efl/WebInspectorProxyEfl.cpp
@@ -30,6 +30,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #if ENABLE(INSPECTOR)
 
 #include "WebProcessProxy.h"
+#include "ewk_view.h"
 #include "ewk_view_private.h"
 #include <WebCore/NotImplemented.h>
 #include <unistd.h>
@@ -47,6 +48,7 @@ WebPageProxy* WebInspectorProxy::platformCreateInspectorPage()
         return 0;
 
     m_inspectorView = ewk_view_base_add(ecore_evas_get(m_inspectorWindow), toAPI(page()->process()->context()), toAPI(inspectorPageGroup()));
+    ewk_view_theme_set(m_inspectorView, TEST_THEME_DIR"/default.edj");
     return ewk_view_page_get(m_inspectorView);
 }
 
